# Jump

./: .gitignore  CMakeLists.txt  README.md  best_time.txt  filename.txt  main.cpp
Application/: GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  GamingState.cpp  GamingState.h  JumperApplication.cpp  JumperApplication.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayingState.cpp  PlayingState.h  SettingsState.cpp  SettingsState.h
Controllers/: CameraManager.cpp  CameraManager.h  CollisionManager.cpp  CollisionManager.h
GUI/: Ball.cpp  Ball.h  Entity.cpp  Entity.h  Fire.cpp  Fire.h  Ghost.cpp  Ghost.h  Heart.cpp  Heart.h  Map.cpp  Map.h  MenuButton.cpp  MenuButton.h  Player.cpp  Player.h  Pumpkin.cpp  Pumpkin.h  Timer.cpp  Timer.h
Test/: BackGroundTests.cpp  CMakeLists.txt  CameraTest.cpp  ColliosionTest.cpp  CollisionTest.cpp  GamingTest.cpp  MapTest.cpp  PlatformTest.cpp  PlayerTest.cpp
Test/lib/googletest/: CMakeLists.txt
Test/lib/googletest/docs/: AdvancedGuide.md
Test/lib/googletest/include/gtest/: gtest-death-test.h
Test/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-port.h
Test/lib/googletest/scripts/: upload.py
Test/lib/googletest/src/: gtest-death-test.cc
Test/lib/googletest/test/: gtest-death-test_test.cc  gtest_output_test_.cc
Utilities/: PhysicsSystem.cpp  PhysicsSystem.h  TextureManager.cpp  TextureManager.h  TimerClass.cpp  TimerClass.h  constants.h
hitbox/: MapHitboxes.json
